Source/WebCore/page/Frame.cpp
@@ -27,17 +27,20 @@
 #include "Frame.h"
 
 #include "ContainerNodeInlines.h"
+#include "DocumentView.h"
 #include "FrameInlines.h"
 #include "FrameLoader.h"
 #include "FrameLoaderClient.h"
 #include "HTMLFrameOwnerElement.h"
 #include "HTMLIFrameElement.h"
 #include "LocalDOMWindow.h"
+#include "LocalFrameView.h"
 #include "NavigationScheduler.h"
 #include "NodeDocument.h"
 #include "OwnerPermissionsPolicyData.h"
 #include "Page.h"
 #include "RemoteFrame.h"
+#include "RemoteFrameLayoutInfo.h"
 #include "RenderElement.h"
 #include "RenderWidget.h"
 #include "ScrollingCoordinator.h"
@@ -346,7 +349,29 @@ void Frame::updateFrameTreeSyncData(Ref<FrameTreeSyncData>&& data)
 
 void Frame::updateFrameTreeSyncData(const FrameTreeSyncSerializationData& data)
 {
+    auto invalidateChildFrameForDarkAppearanceChange = [&](const auto& oldMap, const auto& newMap) {
+        for (RefPtr child = tree().firstChild(); child; child = child->tree().nextSibling()) {
+            RefPtr localChild = dynamicDowncast<LocalFrame>(child);
+            if (!localChild)
+                continue;
+
+            auto oldFrameInfo = oldMap.getOptional(child->frameID());
+            auto newFrameInfo = newMap.getOptional(child->frameID());
+
+            if (!oldFrameInfo || !newFrameInfo || oldFrameInfo->useDarkAppearance != newFrameInfo->useDarkAppearance) {
+                RefPtr localChildView = localChild->view();
+
+                localChildView->invalidateForBaseBackgroundOrColorSchemeChange();
+                protect(localChildView->layoutContext())->scheduleLayout();
+            }
+        }
+    };
+
+    auto oldChildrenFrameLayoutMap = m_frameTreeSyncData->childrenFrameLayoutInfo;
+
     protect(frameTreeSyncData())->update(data);
+
+    invalidateChildFrameForDarkAppearanceChange(oldChildrenFrameLayoutMap, m_frameTreeSyncData->childrenFrameLayoutInfo);
 }
 
 bool Frame::frameCanCreatePaymentSession() const
