Source/WebCore/rendering/RenderFrameBase.cpp
@@ -46,6 +46,25 @@ RenderFrameBase::RenderFrameBase(Type type, HTMLFrameElementBase& element, Rende
 
 RenderFrameBase::~RenderFrameBase() = default;
 
+void RenderFrameBase::styleDidChange(Style::Difference diff, const RenderStyle* oldStyle)
+{
+    RenderWidget::styleDidChange(diff, oldStyle);
+
+    if (!oldStyle || diff < Style::DifferenceResult::Repaint)
+        return;
+
+    RefPtr childFrameView = dynamicDowncast<LocalFrameView>(widget());
+    if (!childFrameView)
+        return;
+
+    RefPtr document = this->document();
+
+    if (document->useDarkAppearance(oldStyle) != document->useDarkAppearance(protect(&style()))) {
+        childFrameView->invalidateForBaseBackgroundOrColorSchemeChange();
+        protect(childFrameView->layoutContext())->scheduleLayout();
+    }
+}
+
 inline bool shouldExpandFrame(LayoutUnit width, LayoutUnit height, bool hasFixedWidth, bool hasFixedHeight)
 {
     // If the size computed to zero never expand.
